# idea-pad-manager

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  devenv.nix  flake.nix
.github/workflows/: release.yml
scripts/: build-prod-static.sh  build-prod.sh  build.sh  format-tidy.sh  format.sh  run.sh  tidy-staged.sh  tidy.sh
src/: Main.cpp  main.cpp
src/sys/: AboutSystem.cpp  AboutSystem.hpp  PowerInformation.cpp  PowerInformation.hpp  ThermalPerformance.cpp  ThermalPerformance.hpp
src/sys/utils/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp
src/ui/: App.cpp  App.hpp  FrameRefresher.cpp  FrameRefresher.hpp  NavigatorTab.cpp  NavigatorTab.hpp  app.cpp  app.hpp  fan_speed.cpp  fan_speed.hpp  frame_refresher.cpp  frame_refresher.hpp  navigator_tab.cpp  navigator_tab.hpp  power_information.cpp  power_information.hpp  tab_view.cpp  tab_view.hpp  view_base.cpp  view_base.hpp
src/ui/animations/: Animation.hpp  Battery.cpp  Battery.hpp  BatteryAnimation.cpp  BatteryAnimation.hpp  CanvasAnimation.hpp  CoolingFan.cpp  CoolingFan.hpp  DoomFire.cpp  DoomFire.hpp  Empty.cpp  Empty.hpp  FanAnimation.cpp  FanAnimation.hpp  Gear.cpp  Gear.hpp  GearAnimation.cpp  GearAnimation.hpp  HostName.cpp  HostName.hpp  Lightning.cpp  Lightning.hpp  Matrix.cpp  Matrix.hpp
src/ui/pages/: AboutSystem.cpp  AboutSystem.hpp  Page.cpp  Page.hpp  PowerInformation.cpp  PowerInformation.hpp  ThermalPerformance.cpp  ThermalPerformance.hpp  page.cpp  page.hpp  power_information.cpp  power_information.hpp
src/ui/utils/: CustomCanvas.cpp  CustomCanvas.hpp  Dropdown.cpp  Dropdown.hpp  DynamicFocusableText.cpp  DynamicFocusableText.hpp  FocusableText.cpp  FocusableText.hpp  LabelButton.cpp  LabelButton.hpp
